# skymarket_fullstack

./: .env.example  .flake8  .gitignore  README.md  docker-compose.yaml  pyproject.toml
market_postgres/: docker-compose.yaml
skymarket/: Dockerfile  pyproject.toml
skymarket/ads/: admin.py  apps.py  filters.py  models.py  paginators.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py
skymarket/redoc/templates/: redoc.html
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: admin.py  email.py  managers.py  models.py  serializers.py  urls.py
skymarket/users/management/commands/: loadall.py
skymarket/users/migrations/: 0001_initial.py
